fixed cropping for my pic

--- a/css/styles.css
+++ b/css/styles.css
@@ -669,7 +669,7 @@ footer {
 }
 
 .avatar-adjust {
-    object-position: 65% center;
+    object-position: 65% -5%;
 }
 
 .name {
